--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 site_name: 'Sumner Docs &middot; JAX'
 site_description: 'Documentation about HPC Sumner'
 site_author: 'Samir B. Amin'
-site_url: 'https://sumner.verhaaklab.com'
+site_url: 'https://thejacksonlaboratory.github.io/sumnerdocs/'
 ## enable 'edit this page' link
 repo_edit: true
 repo_name: 'TheJacksonLaboratory/sumnerdocs'
